Bug 327612 - Cursor shape bug using in preferences "Brush outline with ..."
Summary: Cursor shape bug using in preferences "Brush outline with ..."
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-14 14:12 UTC by David REVOY
Modified: 2013-11-15 18:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2013-11-14 14:12:56 UTC
There is a bug witch make difficult the use of the Cursor Shape : "Brush outline with ... " difficult . ( in preferences panel , General , then 'Cursor Shape list' ). 

to reproduce :
============
1. Go to pref, switch Cursor shape to use for example  : "Brush outline with small circle"
2. Select a brush and paint freehand ( B ) , all is ok and improve the visibility of small brush, and center of big. Also, movement of cursor is smoother and blink less. A real advantage. 
3.  Select a selection tool , or select the color picker and use them now. 

what it does :
============
All cursor in Krita are replaced with the small circle ( ex : color picker appear as a small circle ). The usage of the tools become confusing. The user don't have feedback.

what expected :
=============
All non-painting tools ( picker, selections, move tool ) should keep their cursor ( generally a simple cursor with a bottom right corner little tool icon for the feedback ).
Comment 1 Dmitry Kazakov 2013-11-15 17:12:18 UTC
Yes, all the tools except Freehand Tool have wrong cursor.
Comment 2 Dmitry Kazakov 2013-11-15 18:39:00 UTC
Git commit a19cb14bb92cdc8ba181e1e74e9bdef1933260c0 by Dmitry Kazakov.
Committed on 15/11/2013 at 18:38.
Pushed by dkazakov into branch 'master'.

Fix the cursor of all the non-brush tools

The cursor/outline switching code has been moved to KisToolFreehand,
which means that the settings will be applied to it only. The rest of
the tools will show its default cursor.

M  +0    -25   krita/ui/tool/kis_tool.cc
M  +28   -0    krita/ui/tool/kis_tool_freehand.cc
M  +1    -0    krita/ui/tool/kis_tool_freehand.h
M  +0    -13   krita/ui/tool/kis_tool_paint.cc
M  +0    -1    krita/ui/tool/kis_tool_paint.h

http://commits.kde.org/calligra/a19cb14bb92cdc8ba181e1e74e9bdef1933260c0