Fix the cursor of all the non-brush tools

The cursor/outline switching code has been moved to KisToolFreehand,
which means that the settings will be applied to it only. The rest of
the tools will show its default cursor.

BUG:327612